# aegisgate

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-CHOICE.md  Makefile  README.md  docker-compose.yaml  test_http_detect.py
.github/workflows/: ci.yml  release.yml
benchmark/: BENCHMARK_FAQ.md  BENCHMARK_RESULTS.md  PERFORMANCE_COMPARISON.md  README.md
benchmark/scripts/: benchmark_quick.py  benchmark_rigorous.py  benchmark_stress.py  run_benchmark.sh
config/: aegis_config.yaml
crates/aegis-common/: Cargo.toml
crates/aegis-common/src/: lib.rs
crates/aegis-proxy/: Cargo.toml
crates/aegis-proxy/examples/: flood_test.rs  mqtt_load_test.rs  stress_test.rs
crates/aegis-proxy/src/: lib.rs  main.rs  metrics.rs
crates/aegis-proxy/src/engine/: connection.rs  http.rs  inspector.rs  limiter.rs  mod.rs  slowloris.rs
crates/aegis-proxy/src/parser/: mqtt.rs
crates/aegis-proxy/tests/: http_tests.rs  mqtt_decoder.rs  proxy_test.rs  slowloris_tests.rs
crates/aegis-proxy/tests/protocol/mqtt/: remaining_length.rs
scripts/: test_mqtt_flow.sh  test_protocol_rejection.sh  test_slowloris_attacks.sh  test_slowloris_protection.sh
