[package]
name = "aegis-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
aegis-common = { path = "../aegis-common" }
dashmap = "6.0"
once_cell = "1.19"
bytes = "1.5"
tokio-util = { version = "0.7", features = ["rt"] }
prometheus = "0.13"
lazy_static = "1.4"
hyper = { version = "0.14", features = ["full"] }
[dev-dependencies]
rumqttc = "0.24"
